# ezkl-test

./: Cargo.toml  proof.json  settings.json  test.vk
core-ezkl/: Cargo.toml
core-ezkl/src/: circuit.rs  graphsettings.rs  graphwitness.rs  lib.rs  model.rs  old.rs  runargs.rs  snark.rs  srs_params.rs  supportedop.rs  utils.rs
src/: main.rs
