[package]
name = "core-ezkl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#snark-verifier = { git = "https://github.com/zkonduit/snark-verifier", branch = "ac/chunked-mv-lookup", features=["derive_serde"]}
halo2_gadgets = { git = "https://github.com/zkonduit/halo2", branch= "ac/lookup-modularity" }
halo2_proofs = { git = "https://github.com/zkonduit/halo2", branch= "ac/lookup-modularity"  }
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves.git" }
clap = { version = "4.3.3", features = ["derive"]}
serde = { version = "1.0.0", features = ["derive"]}
serde_json = "1.0.0"